syntax = "proto2";

message LatinAmericanBankEmpty {}

message LatinAmericanBankIdRequest {
  required string id = 1;
}

message LatinAmericanBankNotIdRequest {
  required string bankName = 1;
  required string swift = 2;
  required string country = 3;
}

message LatinAmericanBankRequest {
  required string id = 1; 
  required string bankName = 2;
  required string swift = 3;
  required string country = 4;
}

message LatinAmericanBanksTableRequest {
  required int32 page = 1;
  optional int32 per_page = 2 [default = 15];
  optional string search = 3;
}

message LatinAmericanBanksResponse {
  required LatinAmericanBankRequest latin = 1;
}

message LatinAmericanBanksMultipleResponse {
  repeated LatinAmericanBankRequest latin = 1;
}

message LatinAmericanBanksTableResponse {
  repeated LatinAmericanBankRequest items = 1;
  required int32 page = 2;
  required int32 per_page = 3;
  required int32 total_items = 4;
  required int32 num_pages = 5;
}


service LatinAmericanBanks {
  rpc table (LatinAmericanBanksTableRequest) returns (LatinAmericanBanksTableResponse);
  rpc get_all (LatinAmericanBankEmpty) returns (LatinAmericanBanksMultipleResponse);
  rpc get (LatinAmericanBankIdRequest) returns (LatinAmericanBanksResponse);
  rpc save (LatinAmericanBankNotIdRequest) returns (LatinAmericanBanksResponse);
  rpc update (LatinAmericanBankRequest) returns (LatinAmericanBanksResponse);
  rpc delete (LatinAmericanBankIdRequest) returns (LatinAmericanBanksResponse);
}

